SubBt/force-app/main/default/objects/To_Do_Items__c/To_Do_Items__c.object-meta.xml
<CustomObject>
    <label>To Do Item</label>
    <nameField>
        <displayFormat>TDI-{000000}</displayFormat>
        <label>TDI #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>To Do Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>