SubBt/force-app/main/default/objects/To_Do_Items__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Vendor Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>To Do Items</relationshipLabel>
    <relationshipName>To_Do_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>