SubBt/force-app/main/default/objects/To_Do_Items__c/fields/Assigned_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>To_Do_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>