SubBt/force-app/main/default/objects/To_Do_Items__c/fields/To_Do__c.field-meta.xml
<CustomField>
    <fullName>To_Do__c</fullName>
    <label>To Do</label>
    <referenceTo>To_Do__c</referenceTo>
    <relationshipName>To_Do_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>