SubBt/force-app/main/default/objects/To_Do_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Assigned_Vendor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>To_Do__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>